--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,9 @@ a:hover{
 .offset{
 	float: left;
 }
+.persoective{
+	perspective: 1000px;
+}
 /*classes*/
 .window__label{
 	background-color: #606060;
@@ -51,12 +54,19 @@ a:hover{
 	margin: 10px 10px;
 	background-color: #fff;
 	height: 170px;
-	box-shadow: 0px -5px 5px rgba(0,0,0,0.5);	
+	box-shadow: 0px -5px 5px rgba(0,0,0,0.5);
+
 }
 .window__element__topic{
 	border-top: 1px solid black;
 	padding-top: 10px;
 	padding-left: 10px;
 	font-size: 16px;
+}
+
+/*hover_effects*/
+.window__element:hover{
+	 transform: rotateY(7deg);
+	 transition: 1s;	
 }
 /*media_query*/
